# Path-Planning

./: .gitignore  README.md  config.json  demo.ipynb  env.json  environment.yml  plot_examples.py  pyproject.toml  results.json
benchmark/solutions/32x32_obst204/: map_32by32_obst204_agents10_ex0_output.yaml  map_32by32_obst204_agents10_ex10_output.yaml  map_32by32_obst204_agents10_ex11_output.yaml  map_32by32_obst204_agents10_ex12_output.yaml  map_32by32_obst204_agents10_ex14_output.yaml  map_32by32_obst204_agents10_ex15_output.yaml  map_32by32_obst204_agents10_ex16_output.yaml  map_32by32_obst204_agents10_ex17_output.yaml  map_32by32_obst204_agents10_ex18_output.yaml  map_32by32_obst204_agents10_ex19_output.yaml  map_32by32_obst204_agents10_ex1_output.yaml  map_32by32_obst204_agents10_ex20_output.yaml  map_32by32_obst204_agents10_ex21_output.yaml  map_32by32_obst204_agents10_ex22_output.yaml  map_32by32_obst204_agents10_ex23_output.yaml  map_32by32_obst204_agents10_ex24_output.yaml  map_32by32_obst204_agents10_ex25_output.yaml  map_32by32_obst204_agents10_ex26_output.yaml  map_32by32_obst204_agents10_ex27_output.yaml  map_32by32_obst204_agents10_ex28_output.yaml  map_32by32_obst204_agents10_ex29_output.yaml  (+130 more)
config/: map.yaml  prune_config.yaml  train.yaml  train_dummy.yaml
misc/: path.txt  schedule.json
path_planning/data_generation/: dataset_gen.py  dataset_generate.py  dataset_ground_truth.py  dataset_ground_truth_map.py  dataset_ground_truth_solve.py  dataset_ground_truth_util.py  dataset_label.py  dataset_util.py  dataset_visualize.py  dataset_visualize_graph.py  dataset_visualize_ground_truth.py  target_gen.py  trajectory_parser.py
path_planning/gnn/: dataloader.py  dataset_prune.py  gnn_visualization.py  lightning.py  loss.py  model.py  optimizer.py  train.py
path_planning/multi_agent_planner/: data_type.py  mapf_solver.py
path_planning/utils/: cgal_sweep.py  checker.py  util.py
python_motion_planning/local_planner/: local_planner.py  pid.py
scripts/: run_cbs.py  run_cbs_benchmark.py  run_cbs_radius.py  run_dataset_gen.py  run_dataset_loader.py  run_dataset_vis.py  run_graph_sampler.py  run_icbs.py  run_lacam.py  run_make_environments.py  run_prm.py  run_rrg.py  run_target_gen.py  run_trajectory_parser.py
scripts/generate/: run_all.py  run_all_solvers.py  run_dataset_gen.py  run_dataset_vis.py  run_generate.py  run_ground_truth.py  run_label.py  run_summarize_solvers  run_summarize_solvers.py  run_target_gen.py  run_trajectory_parser.py  run_visualize_graph.py  run_visualize_gt.py
scripts/mapf/: run_benchmark.py  run_cbs.py  run_ccbs.py  run_icbs.py  run_iccbs.py  run_lacam.py  run_lacam_random.py  run_mapf_checker.py  run_sipp.py
scripts/roadmaps/: run_astar.py  run_graph_sampler.py  run_make_environments.py  run_prm.py  run_rrg.py  run_thetastar.py  run_voronoi.py
scripts/test/: run_all_gnn_solvers.py  run_all_solvers.py  run_check_solution.py  run_create_gnn_maps.py  run_summarize_solvers.py  run_visualize_graph.py  run_visualize_solvers.py
scripts/train/: run_create_gnn_maps.py  run_dataset_loader.py  run_lightning_train.py  run_train.py  run_visualize_graph.py
tests/: test_coordinate_contract.py
(+1014 files in other folders)
