[project]
name = "path-planning"
version = "0.1.0"
description = ""
authors = [
    {name = "Brandon Ho",email = "bho36@gatech.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel (>=7.1.0,<8.0.0)",
    "python-motion-planning (==2.0.dev2)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "trame (>=3.12.0,<4.0.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "cgal (>=6.0.1.post202410241521,<7.0.0)",
    "rtree (>=1.4.1,<2.0.0)",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["path_planning"]
